--- a/popup.html
+++ b/popup.html
@@ -16,11 +16,9 @@
 		<h1>
 			UTD Grades
 		</h1>
-		<button id="changeColor"></button>
+		<button id="butt"></button>
 		<script src="popup.js"></script>
 		<p style="min-width:350px; min-height:700px;">
-
 		</p>
-		<script src="popup.js"></script>
     </body>
 </html>
