--- a/popup.html
+++ b/popup.html
@@ -7,18 +7,19 @@
 	<style>
 			button{
 				height: 50px;
-				width: 50px;
+				width: 200px;
 				outline: none;
+				color: orange;
 			}
 	</style>
 	</head>
     <body>
 		<h1>
-			UTD Grades
+			RateMyProfessor
 		</h1>
-		<button id="butt"></button>
+		<button id="butt">Click to open RateMyProfessor for selected course</button>
 		<script src="popup.js"></script>
-		<p style="min-width:350px; min-height:700px;">
+		<p style="min-width:350px;">
 		</p>
     </body>
 </html>
